Adds sub header in header component

--- a/src/locales/en/header.json
+++ b/src/locales/en/header.json
@@ -2,5 +2,9 @@
   "date": "May 15, 2023",
   "trending": "Trending",
   "news": "9 people were injured when a truck crashed into a house in Tanahun",
-  "language": "Language"
+  "language": "Language",
+  "team": "Team",
+  "advertisement": "Advertisement",
+  "thoughts": "Thoughts of the day",
+  "membership": "Membership"
 }
