--- a/src/locales/np/header.json
+++ b/src/locales/np/header.json
@@ -2,5 +2,9 @@
   "date": "आइतबार, ३ वैशाख २०८०",
   "trending": "ट्रेन्डिङ",
   "news": "तनहुँमा घरमा ठोक्कियो ट्रक, ९ जना घाइते",
-  "language": "भाषा"
+  "language": "भाषा",
+  "team": "टोली",
+  "advertisement": "विज्ञापन",
+  "thoughts": "आजको विचार",
+  "membership": "सदस्यता"
 }
